[css-grid] Update grid when changing auto repeat type https://bugs.webkit.org/show_bug.cgi?id=197849

Reviewed by Javier Fernandez.

LayoutTests/imported/w3c:

Import WPT test.

* web-platform-tests/css/css-grid/grid-definition/grid-change-auto-repeat-tracks-expected.txt: Added.
* web-platform-tests/css/css-grid/grid-definition/grid-change-auto-repeat-tracks.html: Added.
* web-platform-tests/css/css-grid/grid-definition/w3c-import.log:

Source/WebCore:

Test: imported/w3c/web-platform-tests/css/css-grid/grid-definition/grid-change-auto-repeat-tracks.html

This patch makes two 'repeat()' values for 'grid-template' be considered
to be different if one uses 'auto-fill' and the other 'auto-fit'.

Previously, they were considered to be equal if the repeated values
were the same, without comparing the repeat type. Therefore, the grid
was not updated when setting both values one after the other.

* css/CSSGridAutoRepeatValue.cpp:
(WebCore::CSSGridAutoRepeatValue::equals const):
* css/CSSGridAutoRepeatValue.h:

LayoutTests:

Remove the test which has been upstreamed to WPT.

* fast/css-grid-layout/grid-change-auto-repeat-tracks-expected.txt: Removed.
* fast/css-grid-layout/grid-change-auto-repeat-tracks.html: Removed.


Canonical link: https://commits.webkit.org/212016@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245295 268f45cc-cd09-0410-ab3c-d52691b4dbfc