Source/WebCore/css/CSSGridAutoRepeatValue.h
@@ -54,6 +54,8 @@ public:
     }
 
     String customCSSText() const;
+    bool equals(const CSSGridAutoRepeatValue&) const;
+
     CSSValueID autoRepeatID() const { return m_autoRepeatID; }
 
 private:
